# park_cerebellar_disinhibition

analysis/: cfin_syn_analysis.m  db_celltype.m  disinhibition_coverage.m  estimate_unrecon_rate_by_sampling.m  ext_data_fig4.m  ext_data_fig_2a.m  ext_data_fig_2b.m  ext_data_fig_2d.m  ext_data_fig_4.m  extfig_compare_in1_in2_sc_bc.m  extfig_in1_in2_axon_fragments.m  extfig_pf_targeting_multiple_in.m  extfig_synapse_density.m  fig2_cfin_syn_examples.m  fig3_cfin_syn_examples.m  fig4_connectivity_matrix.m  fig4_morphological_properties_of_IN.m  fig4_target_preference_in1_in2.m  fig5_pf_connectivity_analysis.m  fig_2d.m  fig_2e.m  fig_2fgh.m  fig_4a.m  fig_4j.m  fig_4k.m  fig_4l.m  fig_4m.m  fig_6b.m  get_axon_dend_fragments_of_in.m  get_syn_info.m  inpc_syn_radial_from_PCL.m  (+7 more)
simulation/simulation/: pyproject.toml
simulation/simulation/notebooks/: plot_all_vertically.ipynb
simulation/simulation/scripts/: run_network_simulation.py  run_pc_simulation.py
simulation/simulation/src/: data_utils_mlinet.py
simulation/simulation/src/dataanalysis_mlinet/: __init__.py  analysis.py  plot.py  shape_plot.py
simulation/simulation/src/hoc/: pc_cf2.hoc  pc_morphology.hoc
simulation/simulation/src/modIN/: Golgi_Ca_LVA.mod  Golgi_KA.mod  Golgi_KV.mod  Golgi_Na.mod  gap.mod  gaps.mod_unused
simulation/simulation/src/modPC/: BK_Slow.mod  CaP.mod  CaT.mod  Kv1.mod  Kv34.mod  SK2.mod  cdp_AIS.mod  cdp_smooth.mod  cdp_soma.mod  cdp_spiny.mod  ih.mod  kv3.mod  kv4f.mod  kv4s.mod  nap.mod  narsg.mod
simulation/simulation/src/sim_mlinet/: __init__.py  cell_templates.py  syndist.py
(+392 files in other folders)
